2019-04-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sdas/aspdk15/Makefile:
	  Remove generated file from svn.

2019-03-29 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCast.c,
	  src/SDCCsymt.h,
	  src/SDCCsymt.c,
	  src/SDCCval.c,
	  support/regression/tests/bug-2751.c,
	  support/regression/tests/generic.c:
	  Fix bug #2751.
	* sdas/aspdk/pdk.h,
	  sdas/aspdk/pdkmch.c,
	  sdas/aspdk14/pdk14mch.c,
	  sdas/aspdk15/pdk15mch.c:
	  Bit instruction fix, patch by Nicolas Lesser.

2019-03-29 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCopt.c: fix bug #2892

2019-03-28 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCglue.c:
	  Fix bug #2837, patch by Alan Cox.
	* sdas/asrab/rabmch.c,
	  sdas/asrab/rabpst.c:
	  Support standard ipset syntax, patch by Alan Cox.
	* src/z80/gen.c:
	  Fix an increment bug, patch by Nick Downing.

2019-03-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sdas/asxxsrc/sdas.c,
	* sdas/asxxsrc/sdas.h,
	* sdas/aspdk14/pdk14mch.c,
	* sdas/aspdk15/pdk15mch.c: possible fix for bug #2890

2019-03-23 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCcse.c: fix bug #2099
	* support/regression/tests/gcc-torture-execute-20041019-1.c:
	  re-enable test

2019-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* doc/sdccman.lyx:
	  Update manual.

2019-03-22 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c: fix bug #2834
	* support/regression/tests/bug-2834.c: re-enable test
	* src/ds390/ralloc.c: fix bug #2603
	* support/regression/tests/gcc-torture-execute-20021120-1.c:
	  re-enable test

2019-03-21 Philipp Klaus Krause <pkk AT spth.de>

	* device/lib/pdk14/__setjmp.s,
	  device/lib/pdk15/__setjmp.s,
	  device/lib/pdk14/Makefile.in,
	  device/lib/pdk15/Makefile.in,
	  support/regression/tests/setjmp.c,
	  support/regression/tests/gcc-torture-execute-20010409-1.c,
	  support/regression/tests/gcc-torture-execute-pr60003.c: