@@ -1,3 +1,9 @@
+2019-04-03 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* device/include/signal.h,
+	  device/include/stdint.h:
+	  Support sig_atomic_t.
+
 2019-04-02 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
 
 	* sdas/aspdk15/Makefile:
